# Python3-devcontainer

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
jupyter-lab/: 02_Data.ipynb  pyproject.toml
