[tool.poetry]
name = "jupyter-lab"
version = "0.1.0"
description = ""
authors = ["Atsushi Hondoh <atsushi.hondoh@gmail.com>"]
readme = "README.md"
packages = [{include = "jupyter_lab"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
